@@ -1,3 +1,8 @@
+2020-12-28  Boruch Baum  <boruch_baum@gmx.com>
+
+	* diredc.el (diredc-hist--prune-deleted-directories): New function.
+	(diredc-hist-select, diredc-hist-previous-directory): Use it.
+
 2020-12-21  Boruch Baum  <boruch_baum@gmx.com>
 
 	* diredc.el (diredc): Don't autoload global keybinding (closes
